<resources>
    <string name="app_name">TaskManagement</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo_text">ToDo</string>
    <string name="wip_text">WIP</string>
    <string name="all_text">ALL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="content_text">やること</string>
    <string name="save_text">保存</string>
    <string name="delete_text">削除</string>
</resources>